=== master

* Work around broken BC date handling in JRuby 9.2.0.0 (jeremyevans)

* Switch use of BigDecimal.new() to BigDecimal(), since the former is deprecated (jeremyevans)

* Add Sequel::VERSION_NUMBER for easier version comparisons (jeremyevans)

* Add Model.has_dataset? to determine if the model class has a dataset (AlexWayfer) (#1508)

* Support use of LIKE with ANY function on PostgreSQL by avoiding unnecessary use of ESCAPE syntax (jeremyevans)

* Disconnect connections left allocated by dead threads instead of returning the connections to the pool (jeremyevans)

* Make both threaded connection pools avoid disconnecting connections while holding the connection pool mutex (jeremyevans)

* Don't deadlock when disconnecting connections in the sharded_threaded connection pool when using connection_validator or connection_expiration extensions (jeremyevans)

* Don't modify hash argument passed in Model.nested_attributes in the nested_attributes plugin (jeremyevans)

* Avoid unnecessary hash creation in many places (jeremyevans)

* Fix duplicate objects in nested associations when eager_graphing cascaded many_to_one=>one_to_many associations (jeremyevans)

=== 5.8.0 (2018-05-01)

* Don't mark SQLAnywhere as supporting WITH in INSERT statement (jeremyevans)

* Support :search_path as a shard option on PostgreSQL (jeremyevans)

* Add Dataset#nowait for raising a Sequel::DatabaseLockTimeout when a locked row is encountered, supported on PostgreSQL, MySQL 8+, MSSQL, and Oracle (jeremyevans)

* Support Dataset#skip_locked on MySQL 8+ (jeremyevans)

* Make schema modification methods in the pg_enum extension work on a frozen Database object (jeremyevans)

* Support common table expressions and window functions on MySQL 8+ (jeremyevans)

* Ignore Dataset#explain :extended option on MySQL 5.7+, since extended output is then the MySQL default (jeremyevans)
