@@ -17,7 +17,14 @@ module Sequel
     # Contains procs keyed on subadapter type that extend the
     # given database object so it supports the correct database type.
     DATABASE_SETUP = {}
+
+    # Create custom NativeException alias for nicer access, and also so that
+    # JRuby 9.2+ so it doesn't use the deprecated ::NativeException
+    NativeException = java.lang.Exception
     
+    # Default database error classes
+    DATABASE_ERROR_CLASSES = [NativeException].freeze
+
     # Allow loading the necessary JDBC support via a gem.
     def self.load_gem(name)
       begin
@@ -168,7 +175,7 @@ module Sequel
                 last_insert_id(conn, opts)
               end
             end
-          rescue NativeException, JavaSQL::SQLException => e
+          rescue NativeException => e
             raise_error(e)
           ensure
             cps.close
@@ -189,7 +196,7 @@ module Sequel
             JavaSQL::DriverManager.setLoginTimeout(opts[:login_timeout]) if opts[:login_timeout]
             raise StandardError, "skipping regular connection" if opts[:jdbc_properties]
             JavaSQL::DriverManager.getConnection(*args)
-          rescue JavaSQL::SQLException, NativeException, StandardError => e
+          rescue NativeException, StandardError => e
             raise e unless driver
             # If the DriverManager can't get the connection - use the connect
             # method of the driver. (This happens under Tomcat for instance)
@@ -203,7 +210,7 @@ module Sequel
               c = driver.new.connect(args[0], props)
               raise(Sequel::DatabaseError, 'driver.new.connect returned nil: probably bad JDBC connection string') unless c
               c
-            rescue JavaSQL::SQLException, NativeException, StandardError => e2
+            rescue NativeException, StandardError => e2
               if e2.respond_to?(:message=) && e2.message != e.message
                 e2.message = "#{e2.message}\n#{e.class.name}: #{e.message}"
               end
@@ -355,7 +362,7 @@ module Sequel
       end
 
       def database_error_classes
-        [NativeException]
+        DATABASE_ERROR_CLASSES
       end
 
       def database_exception_sqlstate(exception, opts)
@@ -436,7 +443,7 @@ module Sequel
                 log_connection_yield(msg, conn, args){cps.executeUpdate}
               end
             end
-          rescue NativeException, JavaSQL::SQLException => e
+          rescue NativeException => e
             raise_error(e)
           ensure
             cps.close unless name
@@ -661,7 +668,7 @@ module Sequel
       def statement(conn)
         stmt = conn.createStatement
         yield stmt
-      rescue NativeException, JavaSQL::SQLException => e
+      rescue NativeException => e
         raise_error(e)
       ensure
         stmt.close if stmt
