@@ -1,5 +1,7 @@
 === master
 
+* Modify jdbc adapter exception handling to work around ::NativeException deprecation in JRuby 9.2 (jeremyevans)
+
 * Work around broken BC date handling in JRuby 9.2.0.0 (jeremyevans)
 
 * Switch use of BigDecimal.new() to BigDecimal(), since the former is deprecated (jeremyevans)
